# Tracking

./: .gitignore  README.md  To dos.docx  meeting notes.docx  planeCapture.m  quadCapture.fig  quadCapture.m  quadCapturePartial.m  quadSimple.m  references.bib  test.rtf
ros/src/meta_planner/: .gitattributes  CMakeLists.txt  package.xml
ros/src/meta_planner/bagfiles/: .gitattributes  hw_demo_recording_2017-09-09-13-18-27.bag  hw_demo_recording_2017-09-09-14-01-11.bag  hw_demo_recording_2017-09-10-10-06-18.bag  hw_demo_recording_OPTIMAL.bag  hw_demo_video_best.bag  sw_demo_recording_LQR.bag  sw_demo_recording_OPTIMAL.bag
ros/src/meta_planner/config/: meta_planner.yaml
ros/src/meta_planner/exec/: demo_node.cpp  meta_planner_node.cpp  sensor_node.cpp  simulator_node.cpp  tracker_node.cpp
ros/src/meta_planner/launch/: demo.launch  hardware_demo.launch  software_demo.launch  test.launch  tracker.launch
ros/src/meta_planner/precomputation/: .gitattributes  test.mat  test_value_function.mat
ros/src/meta_planner/rviz/: meta_planner.rviz
ros/src/meta_planner/scripts/: bound_ys.csv  bound_zs.csv  planner_xs.csv  planner_ys.csv  planner_zs.csv  plot_position_bound.m  plot_subsystems.py  times.csv  tracker_xs.csv  tracker_ys.csv  tracker_zs.csv
ros/src/meta_planner/src/: analytical_point_mass_value_function.cpp  balls_in_box.cpp  box.cpp  empty_box.cpp  flann_tree.cpp  linear_dynamics.cpp  meta_planner.cpp  near_hover_dynamics.cpp  near_hover_quad_no_yaw.cpp  planner.cpp  rrt_connect.cpp  sensor.cpp  simulator.cpp  subsystem_value_function.cpp  tracker.cpp  (+4 more)
(+485 files in other folders)
